[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Fipps-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/HowToPlay.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/music/iznxnqkk.ogg" type="AudioStream" id=4]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/background.png-db55ec47224fbca7de3496d6823058f9.stex"

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D3/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 120, 20 ), Vector2( 140, 20 ), Vector2( 120, 20 ), Vector2( 120, 20 ) ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 220, 140 ), Vector2( 220, 120 ), Vector2( 220, 120 ), Vector2( 220, 120 ), Vector2( 220, 140 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=5]
outline_color = Color( 0.0901961, 0.0156863, 0.0156863, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=6]
load_path = "res://.import/tile898.png-b6d2a646fdeccaa0159b409500be0810.stex"

[sub_resource type="Animation" id=7]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 1, 1.3, 1.5, 1.7, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 180, 180 ), Vector2( 200, 180 ), Vector2( 200, 180 ), Vector2( 180, 180 ), Vector2( 180, 180 ), Vector2( 160, 180 ), Vector2( 160, 180 ), Vector2( 160, 180 ) ]
}

[sub_resource type="Animation" id=8]
loop = true
step = 0.01

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 12
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -90.0
margin_top = -20.0
margin_right = 870.0
margin_bottom = 490.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 380, 221.75 )
scale = Vector2( 1, 1.05188 )
texture = SubResource( 1 )

[node name="SwordAnim" type="AnimationPlayer" parent="."]
anims/Sword = SubResource( 2 )

[node name="JumpAnim" type="AnimationPlayer" parent="."]
anims/Jump = SubResource( 3 )

[node name="Node2D3" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 180, 110 )

[node name="RichTextLabel3" type="RichTextLabel" parent="Node2D3"]
anchor_left = 0.5
anchor_right = 0.5
margin_right = 110.0
margin_bottom = 50.0
custom_styles/normal = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
text = "& Sword"

[node name="Sprite" type="Sprite" parent="Node2D3"]
position = Vector2( 133.563, 20 )
scale = Vector2( 2, 2 )
texture = SubResource( 6 )

[node name="Node2D2" type="Node2D" parent="."]
visible = false
position = Vector2( 195.785, 180 )
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Node2D2"]
anchor_left = 0.5
anchor_right = 0.5
margin_right = 110.0
margin_bottom = 50.0
custom_styles/normal = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
text = "& Dash "

[node name="DashAnim" type="AnimationPlayer" parent="."]
anims/Dash = SubResource( 7 )

[node name="HowToPlay" parent="." instance=ExtResource( 3 )]
visible = false

[node name="PressSpaceAnim" type="AnimationPlayer" parent="."]
anims/PressSpace = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 220, 137.111 )
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="Node2D"]
anchor_left = 0.5
anchor_right = 0.5
margin_right = 350.0
margin_bottom = 50.0
custom_styles/normal = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
text = "Jump And Sword And Dash"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -86.0
margin_top = -83.0
margin_right = 86.0
custom_fonts/font = SubResource( 9 )
text = "PRESS SPACE
TO CONTINUE"

[node name="Label2" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -86.0
margin_top = -83.0
margin_right = 86.0
custom_fonts/font = SubResource( 9 )
text = "Touch Screen
To Continue"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 257.0
margin_top = 222.0
margin_right = 504.0
margin_bottom = 318.0
custom_fonts/font = SubResource( 10 )
text = "Art: Kenney (Kenney.nl)
Backgrounds: Eder Muniz
Everything Else: Ayylmao"
